Pushed with l̶o̶v̶e̶ shove.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,9 +6,10 @@
     "configurations": [
         {
             "type": "java",
-            "name": "Debug (Launch)",
+            "name": "Debug (Launch) - Current File",
             "request": "launch",
-            "mainClass": ""
-        }
+            "vmArgs": "--enable-preview",
+            "mainClass": "${file}",
+        },
     ]
 }
